# docs/swagger.json
@@ -585,7 +585,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/response.UnauthorizedEnvelope"
+                            "$ref": "#/definitions/response.ErrorEnvelope"
                         }
                     },
                     "429": {
@@ -943,20 +943,16 @@
                 }
             }
         },
-        "response.ErrorData": {
+        "response.ErrorEnvelope": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string",
-                    "example": "unauthorized"
-                }
-            }
-        },
-        "response.ErrorEnvelope": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/response.ErrorData"
+                    "example": "title is required"
+                },
+                "statusCode": {
+                    "type": "integer",
+                    "example": 400
                 },
                 "success": {
                     "type": "boolean",
@@ -971,23 +967,6 @@
                 "success": {
                     "type": "boolean",
                     "example": true
-                }
-            }
-        },
-        "response.UnauthorizedEnvelope": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "unauthorized"
-                },
-                "statusCode": {
-                    "type": "integer",
-                    "example": 401
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
                 }
             }
         },
